# python-markdown-oembed

./: README.md  pyproject.toml  tests.py
mdx_oembed/: __init__.py  endpoints.py  extension.py  inlinepatterns.py  oembed.py
src/python_markdown_oembed_extension/: __init__.py  oembedextension.py
