[project]
name = "python-markdown-oembed-extension"
dynamic = ["version"]
description = "Markdown extension to allow media embedding using the oEmbed standard."
readme = {file = "README.md", content-type = "text/markdown"}
license = "Unlicense"
requires-python = ">=3.12"
authors = [
    { name = "Benedikt Willi", email = "ben.willi@gmail.com" },
    { name = "Tanner Netterville", email = "tannern@gmail.com" },
]
keywords = ["markdown", "oembed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "Markdown>=3.2",
    "nh3>=0.2",
]

[project.urls]
Homepage = "https://github.com/Hopiu/python-markdown-oembed"

[project.entry-points."markdown.extensions"]
oembed = "mdx_oembed:makeExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mdx_oembed/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "mdx_oembed/",
    "tests.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["mdx_oembed"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "S", "B"]
ignore = [
    "S101",  # assert used — standard in pytest
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S106"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
